--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "influx": "^5.4.1",
-    "mongodb": "^3.3.0-beta2",
-    "socket.io": "^2.2.0",
-    "vis": "^4.21.0"
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
